# tokyo-best-food-2025

./: .gitignore  README.md  STATIC_SITE.md  TEST_README.md  app.js  build_complete_static.py  build_static.py  categories.json  conftest.py  example.py  fix_addresses.py  fix_hours.py  fix_price_ranges.py  fix_static.py  generate_static.py  main.py  pyproject.toml  stats.json  test_static_site.py  urls.txt
src/gotanda/: __init__.py  cli.py  database.py  scraper.py  web.py
src/gotanda/templates/: index.html
static_site/: README.md  index.html  restaurants.json  styles.css
