[project]
name = "gotanda"
version = "0.1.0"
description = "Tabelog Hyakumeiten scraper and searchable database of Tokyo's best restaurants"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.8.0",
    "polars>=1.36.1",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "flask>=3.1.0",
    "folium>=0.19.2",
]

[project.scripts]
gotanda = "gotanda.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gotanda"]
package-dir = {"" = "src"}
